SERVER-11240 Wrong error message when readPreference tags are invalid